# meraki-scripts

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
input/: template.toml
src/meraki_scripts/: addresses.py  alerts.py  apicalls.py  celldata.py  cellular.py  copygp.py  delete_group_policies.py  identity.py  mx_uplink.py  networks.py  sort.py  updategp.py  uplinkstats.py
src/meraki_scripts/universal/: fileops.py  merakiops.py
