[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "meraki-scripts"
version = "0.0.1"
dynamic = ["dependencies"]

[project.scripts]
addresses = "meraki_scripts.addresses:main"
networks = "meraki_scripts.networks:main"
cellular = "meraki_scripts.cellular:main"
uplinkstats = "meraki_scripts.uplinkstats:main"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.flake8]
max-line-length = 99
