[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "meraki-scripts"
version = "0.0.1"
dynamic = ["dependencies"]

[project.scripts]
addresses = "meraki_scripts.addresses:main"
alerts = "meraki_scripts.alerts:main"
copygp = "meraki_scripts.copy_group_policies:main"
deletegp = "meraki_scripts.delete_group_policies:main"
mxuplink = "meraki_scripts.mx_uplink:main"
networks = "meraki_scripts.networks:main"
cellular = "meraki_scripts.cellular:main"
updategp = "meraki_scripts.updategp:main"
uplinkstats = "meraki_scripts.uplinkstats:main"
sort = "meraki_scripts.sort:main"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.flake8]
max-line-length = 99
